2005-12-03  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/xmlnode.c: bugfix in xmlnode_get_tags()
    * dialback/dialback.h: using ns aware api of xmlnode
    * dialback/dialback.c: same
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same

2005-12-02  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: new functions xmlnode_get_tags(),
    	and xmlnode_get_list_item(). Implementing a small subset of xpath.
    * jabberd/lib/xmlnode.c: same
    * xdb_file/xdb_file.c: using xmlnode_get_tags()

2005-12-01  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/expat.c: remove temp files when writing to them failed,
    	write xml declaration on writing xml files
    * jabberd/lib/xmlnode.c: new function xmlnode_change_namespace
    * xdb_file/xdb_file.c: using the namespace API of xmlnode

2005-11-30  Matthias Wimmer  <m@tthias.net>

    * jabberd/mio_xml.c: temporarily workaround until I find the bug in
	processing ending scopes of namespace prefixes

2005-11-29  Matthias Wimmer  <m@tthias.net>

    * jabberd/jabberd.h: namespace aware parsing of XMPP streams
    * jabberd/mio_xml.c: same
    * jabberd/mio.c: same
    * jabberd/lib/xmlnode.c: same
    * jabberd/lib/xstream.c: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/expat.c: ns aware attrib handling for parsing strings/files

2005-11-28  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: xml:lang support in xmlnode
    * jabberd/lib/xmlnode.c: same
    * jabberd/jabberd.h: xml:lang support on streams
    * jabberd/mio_xml.c: same
    * jabberd/lib/expat.c: parsing strings and files namespace aware

2005-11-27  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback.c: namespace handling updates
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * jabberd/jabberd.h: same
    * jabberd/mio.c: same
    * jabberd/base/base_accept.c: same
    * jabberd/base/base_connect.c: same
    * jabberd/lib/xmlnode.c: same